<resources>
    <string name="app_name">BudgetBuddy</string>
    <string name="analysis">Analysis</string>
    <string name="balance">Balance</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="preview">Preview</string>
    <string name="transactions">Transactions</string>
    <string name="monthly_summary">Monthly Summary</string>
    <string name="search_transaction">Search Transaction</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="biometric">Biometric</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_username_or_password">Forget username or password?</string>
    <string name="contact_us">Contact Us</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="merchant">Merchant</string>
    <string name="source">Source</string>
    <string name="transaction_details">Transaction Details</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="phone_number_optional">Phone Number (Optional)</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="expense">Expense</string>
    <string name="account">Account</string>
    <string name="details">Details</string>
    <string name="store">Store</string>
    <string name="comments">Comments</string>
    <string name="save">Save</string>
    <string name="summary">Summary</string>
    <string name="email_verification">Email Verification</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="resend_code">Resend Verification Code</string>
    <string name="search_category">Search Category</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="edit_transaction">Edit Transaction</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_description">Please enter your email address</string>
    <string name="send_reset_link">Send reset link</string>
    <string name="profile">Profile</string>
    <string name="bank_account">Bank Account</string>
    <string name="sync">Sync</string>
    <string name="remove">Remove</string>
    <string name="support">Support</string>
    <string name="need_help">Need Help?</string>
    <string name="faq">FAQ</string>
    <string name="contact_support">Contact Support</string>
    <string name="report_issue">Report Issue</string>
    <string name="logout">Log out</string>
    <string name="help_support">Help and Support</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="need_more_help">Need more help</string>
    <string name="select_category">Select Category</string>
    <string name="select_category_description">Please select a category</string>
    <string name="percentage">Percentage</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="delete_transaction_confirmation">Are you sure you are going to delete this transaction?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="menu_transaction_detail">Transaction Details</string>
    <string name="action_delete">Delete</string>
    <string name="resend_code_timer">%d seconds left</string>
    <string name="verification_email_sent">Sent to %s</string>
    <string name="back_to_login">Back to login</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account_description" />
    <string name="edit_profile">Edit Profile</string>
    <string name="home">home</string>

    <dimen name="dp_14">14dp</dimen>
</resources>